...
            "state": "translated",
            "value": "Проверяем курсы…"
          }
        }
      }
    },
    "Check fuel consumption": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Check fuel consumption"
...
            "state": "translated",
            "value": "Изменить курс"
          }
        }
      }
    },
    "Edit reminder": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit reminder"
...
            "state": "translated",
            "value": "Новое напоминание"
          }
        }
      }
    },
    "Reminders": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reminders"
...
